# python-project-lvl2

./: .README.md.swp  .gitignore  .travis.yml  README.md  pyproject.toml  tags
gendiff/scripts/: .gendiff.py.swp  gendiff.py
