[tool.poetry]
name = "angpanda-gendiff"
version = "0.1.0"
description = "Education project"
authors = ["Nikolay Nikonov <qnickp@gmail.com>"]
packages = [
  { include = "gendiff" },
]

repository = 'https://github.com/AngPanda/python-project-lvl2'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
